--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,19 +27,23 @@ jobs:
       with:
         allow-prereleases: true
         python-version: ${{ matrix.python-version }}
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+      with:
+        python-version: ${{ matrix.python-version }}
+        enable-cache: true
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install '.[test]'
+        uv sync --all-extras
     - name: Lint with ruff
       run: |
-        ruff check .
+        uv run ruff check .
     - name: Check types with mypy
       run: |
-         mypy alicat
+        uv run mypy alicat
     - name: Pytest
       run: |
-        pytest
+        uv run pytest
 
 permissions:
   contents: read
