--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,3 +95,7 @@ disallow_untyped_defs = false
 addopts = "--cov=alicat"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
