--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ ignore = [
 select = [
     "B",   # flake8-bugbear
     "C",   # complexity
+    "COM", # trailing comma rules
     "D",   # docstrings
     "E",   # pycodestyle errors
     "F",   # pyflakes
