--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ convention = "pep257"
 
 [tool.mypy]
 disallow_untyped_defs = true
+strict = true
 [[tool.mypy.overrides]]
 module = "tests.*"
 disallow_untyped_defs = false
