Update type checking

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Lint with ruff
         run: |
           uv run ruff check .
-      - name: Check types with mypy
+      - name: Check types with zuban
         run: |
-          uv run mypy alicat
+          uv run zuban check
       - name: Pytest
         run: |
           uv run pytest
