--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,15 +32,15 @@ classifiers = [
 ]
 requires-python = ">= 3.10"
 
-[project.optional-dependencies]
-test = [
-  'mypy>=1.18.2',
-  'pytest>=9,<10',
-  'pytest-cov>=7,<8',
-  'pytest-asyncio>=0.23.5',
-  'pytest-xdist>=3,<4',
-  'ruff==0.14.7',
-  'types-pyserial'
+[dependency-groups]
+dev = [
+    "pytest>=9,<10",
+    "pytest-cov>=7,<8",
+    "pytest-asyncio>=0.23.5",
+    "pytest-xdist>=3,<4",
+    "ruff==0.14.7",
+    "types-pyserial",
+    "zuban>=0.3.0",
 ]
 
 [project.scripts]
@@ -100,3 +100,4 @@ asyncio_default_fixture_loop_scope = "session"
 [tool.pyright]
 venvPath = "."
 venv = ".venv"
+typeCheckingMode = "standard"
