--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,23 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
-    -   id: check-json
--   repo: https://github.com/charliermarsh/ruff-pre-commit
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+      - id: check-json
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.14.7
     hooks:
-    -   id: ruff
+      - id: ruff-check
         args: [--fix, --exit-non-zero-on-fix]
--   repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: '0.35.0'
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: "0.35.0"
     hooks:
-    -   id: check-github-workflows
+      - id: check-github-workflows
         args: ["--verbose"]
-    -   id: check-renovate
+      - id: check-renovate
         args: ["--verbose"]
