--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,11 +17,11 @@
     {
       "automerge": true,
       "matchPackageNames": [
-        "/mypy/",
         "/pre-commit/",
         "/pytest/",
         "/ruff/",
-        "python-jsonschema/check-jsonschema"
+        "python-jsonschema/check-jsonschema",
+        "/zuban/"
       ]
     },
     {
